objects/Crisis__c.object
<CustomObject>
    <description>An individual crisis that the company is planning for or currently impacted by.</description>
    <fields>
        <fullName>Crisis_Description__c</fullName>
        <inlineHelpText>Brief description of the ongoing situation.</inlineHelpText>
        <label>Crisis Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Crisis_End_Time__c</fullName>
        <inlineHelpText>When did this crisis end?</inlineHelpText>
        <label>Crisis End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Crisis_Type__c</fullName>
        <inlineHelpText>What is the cause of this crisis?</inlineHelpText>
        <label>Crisis Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Earthquake</fullName>
                </value>
                <value>
                    <fullName>Flood</fullName>
                </value>
                <value>
                    <fullName>Hurricane</fullName>
                </value>
                <value>
                    <fullName>Pandemic</fullName>
                </value>
                <value>
                    <fullName>Tornado</fullName>
                </value>
                <value>
                    <fullName>Violence</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <inlineHelpText>When did this crisis begin?</inlineHelpText>
        <label>Time of Crisis</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>What is the status of this crisis?</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Investigating</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Crisis</label>
    <listViews>
        <fullName>Active_Crisis</fullName>
        <columns>NAME</columns>
        <columns>Crisis_Type__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Investigating,Active</value>
        </filters>
        <label>Active Crisis</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Crisis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Crises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>